stubbing renderer functions

--- a/rsc/main.css
+++ b/rsc/main.css
@@ -3,6 +3,10 @@
  * Main styling, animations, and other misc. snippets.
  */
 
+#tiles {
+	display: none;
+}
+
 #background-layer {
 	z-index: 1;
 }
