--- a/rsc/main.css
+++ b/rsc/main.css
@@ -22,8 +22,9 @@
 }
 
 .button:hover {
-    background-color: rgb(92, 122, 168);
-    color: white;
+    background-color: white;
+    color: rgb(52, 115, 173);
+    border: 2px solid rgb(52, 115, 173);
 }
 
 /* title */
@@ -33,8 +34,34 @@ h1{
 	font-size: 300%;
 }
 
+#menuScreen{
+    background-image: url('img/main_menu_background.jpg');
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+}
+
+body{
+    width: 100vw;
+    height: 100vh;
+    background-position: center 0;
+}
+
+#buttons{
+    position: absolute;
+    transform: translateX(-50%) translateY(-50%);
+    left: 50%;
+    top: 50%;
+    width: 20%;
+    height: 30%;
+}
 
 
 
 
 
+#singlePlayer, #multiPlayer{
+    display: none;
+}
