--- a/rsc/main.css
+++ b/rsc/main.css
@@ -84,3 +84,36 @@ body{
     /* selector, selector means the style applies to both selectors */
     display: none;
 }
+
+.bell_pepper{
+    display: circle;
+    width: 50 px;
+    height: 50 px;
+    border-radius: 50%;
+    background: url('img/dynamic/weapons/bell_pepper.png') center;
+    animation: rotation infinite linear move_weapon 0.5s;
+    animation-direction: normal;
+
+}
+
+.chiltepin{
+    display: circle;
+    width: 50 px;
+    height: 50 px;
+    border-radius: 50%;
+    background: url('img/dynamic/weapons/chiltepin.png') center;
+    animation: rotation infinite linear move_weapon 0.5s;
+    animation-direction: normal;
+}
+
+@keyframes rotation {
+    from {transform: rotate(0deg);}
+    to {transform: rotate(359deg);}
+}
+
+@keyframes move_weapon{
+    from {transform: translateX(0)}
+    to {transform: translateX(200px)}
+}
+
+
