--- a/rsc/main.css
+++ b/rsc/main.css
@@ -75,9 +75,8 @@ h2{
 }
 
 body{
-    width: 100vw;
-    height: 100vh;
-    background-position: center 0;
+    display: flex;
+    justify-items: center;
 }
 
 .bell_pepper{
@@ -85,9 +84,10 @@ body{
     width: 50 px;
     height: 50 px;
     border-radius: 50%;
-    background: url('img/dynamic/weapons/bell_pepper.png') center;
+    background: url('/rsc/img/dynamic/weapons/bell_pepper.png') center;
     animation: rotation infinite linear, move_weapon 0.5s;
     animation-direction: normal;
+    animation-iteration-count: infinite;
 
 }
 
@@ -96,7 +96,7 @@ body{
     width: 50 px;
     height: 50 px;
     border-radius: 50%;
-    background: url('img/dynamic/weapons/chiltepin.png') center;
+    background: url('/rsc/img/dynamic/weapons/chiltepin.png') center;
     animation: rotation infinite linear, move_weapon 0.5s;
     animation-direction: normal;
 }
