--- a/rsc/main.css
+++ b/rsc/main.css
@@ -80,12 +80,10 @@ body{
 }
 
 .bell_pepper{
-    display: circle;
-    width: 50 px;
-    height: 50 px;
-    border-radius: 50%;
-    background: url('/rsc/img/dynamic/weapons/bell_pepper.png') center;
-    animation: rotation infinite linear, move_weapon 0.5s;
+    width: 50px;
+    height: 50px;
+    background: url('/rsc/img/dynamic/weapons/bell_pepper.png');
+    animation: rotation, move_weapon;
     animation-direction: normal;
     animation-iteration-count: infinite;
 
