--- a/rsc/main.css
+++ b/rsc/main.css
@@ -83,25 +83,19 @@ body{
     width: 50px;
     height: 50px;
     background: url('/rsc/img/dynamic/weapons/bell_pepper.png');
-    animation: rotation, move_weapon;
+    animation: move_weapon 0.5s;
     animation-direction: normal;
-    animation-iteration-count: infinite;
+    animation-iteration-count: 1;
 
 }
 
 .chiltepin{
-    display: circle;
-    width: 50 px;
-    height: 50 px;
-    border-radius: 50%;
+    width: 50px;
+    height: 50px;
     background: url('/rsc/img/dynamic/weapons/chiltepin.png') center;
-    animation: rotation infinite linear, move_weapon 0.5s;
+    animation: move_weapon 0.5s;
     animation-direction: normal;
-}
-
-@keyframes rotation {
-    from {transform: rotate(0deg);}
-    to {transform: rotate(359deg);}
+    animation-iteration-count: 1;
 }
 
 @keyframes move_weapon{
