attempting to make image disappear

--- a/rsc/main.css
+++ b/rsc/main.css
@@ -83,24 +83,32 @@ body{
     width: 50px;
     height: 50px;
     background: url('/rsc/img/dynamic/weapons/bell_pepper.png');
-    animation: move_weapon 0.5s;
+    animation: move_weapon 1s;
     animation-direction: normal;
     animation-iteration-count: 1;
-
+    animation-fill-mode: forwards;
 }
 
 .chiltepin{
     width: 50px;
     height: 50px;
     background: url('/rsc/img/dynamic/weapons/chiltepin.png') center;
-    animation: move_weapon 0.5s;
+    animation: move_weapon 5s linear;
     animation-direction: normal;
     animation-iteration-count: 1;
+    animation-fill-mode: forwards;
 }
 
 @keyframes move_weapon{
     from {transform: translateX(0)}
     to {transform: translateX(200px)}
+    0% {
+        opacity: 1;
+    }
+    100% {
+        opacity: 0;
+    }
+    
 }
 
 #singlePlayer, #instructions { 
