--- a/rsc/main.css
+++ b/rsc/main.css
@@ -80,7 +80,42 @@ body{
     background-position: center 0;
 }
 
+.y-flappingLeft, .y-walkingLeft, .y-idleLeft, .y-flappingRight, .y-walkingRight, .y-idleRight {
+  background-image: url('/rsc/img/dynamic/characters/youdee_spritesheet.png');
+  background-repeat: no-repeat;
+  height: 50px;
+  width: 30px;
+}
 
+.y-walkingLeft {
+  animation: walk-left 0.5s steps(2) infinite;
+}
+.y-flappingLeft { 
+  animation: left-flapping 0.5s steps(4) alternate infinite;
+}
+.y-walkingRight {
+  transform: rotateY(180deg);
+  animation: walk-left 0.5s steps(2) infinite;
+}
+.y-flappingRight { 
+  transform: rotateY(180deg);
+  animation: left-flapping 0.5s steps(4) alternate infinite;
+}
+.y-idleRight {
+  transform: rotateY(180deg);
+}
+
+
+@keyframes walk-left {
+  from{background-position-x:-150px;}
+  to{background-position-x:-210px;}
+}
+
+  @keyframes left-flapping {
+    from{background-position-x:-90px;}
+    to{background-position-x:30px;}
+  }
+  
 body {
     display: flex;
     justify-content: center;
