--- a/rsc/main.css
+++ b/rsc/main.css
@@ -77,8 +77,66 @@ h2{
 body{
     width: 100vw;
     height: 100vh;
-    background-position: center 0;
+    background-position: center 0; display: flex;
+    justify-items: center;
 }
+
+.bubble{
+    position: absolute;
+    z-index:1;
+    width: 100px;
+    height: 100px;
+    background: url('img/dynamic/weapons/bubble_wand/bubbles.png');
+    animation: move_weapon 2s;
+    animation-direction: normal;
+    animation-iteration-count: 1;
+    animation-fill-mode: forwards;
+}
+
+.bubbleWand{
+    position: absolute;
+    z-index: 2;
+    width: 100px;
+    height: 100px;
+    background: url('img/dynamic/weapons/bubble_wand/wand.png');
+    
+}
+
+.thaiPepper{
+    width: 100px;
+    height: 100px;
+    background: url('img/dynamic/weapons/thai_pepper.png');
+}
+
+@keyframes move_weapon{
+    from {transform: translateX(0)}
+    to {transform: translateX(200px)} 
+}
+
+
+.health-bar {
+    position: relative;
+    width: 300px;
+    height: 40px;
+    border: 1px solid #000;
+}
+
+.health-bar-fill {
+    height: 100%;
+    background: red;
+    transition: width 0.5s;
+}
+
+.health-bar-value {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-weight: bold;
+}
+  
 
 #singlePlayer, #instructions { 
     /* selector, selector means the style applies to both selectors */
