--- a/tests/rsc/draw.css
+++ b/tests/rsc/draw.css
@@ -20,9 +20,6 @@
 .t856, .t857, .t862, .t863, .t864, .t872, .t873, .t874, .t875, .t876, .t877,
 .t878, .t880, .t881, .t882, .t883, .t884, .t885, .t886, .t887, .t888, .t889,
 .t894, .t895, .t896, .t897, .t898, .t2147483858, .t2684354611, .t2684354612,
-.t2684354652, .t2684354653, {
-	background-image: url('../rsc/data/map/terrain.png');
-	background-repeat: no-repeat;
-	height: 8px;
-	width: 8px;
+.t2684354652, .t2684354653 {
+	background-image: url('../../rsc/data/map/terrain.png') !important;
 }
