--- a/rsc/main.css
+++ b/rsc/main.css
@@ -79,20 +79,41 @@ body{
     justify-items: center;
 }
 
-.bell_pepper_animation{
+.bell_pepper_animation_right{
     width: 50px;
     height: 50px;
     background: url('/rsc/img/dynamic/weapons/bell_pepper.png');
-    animation: move_weapon 1s linear;
+    animation: move_weapon_right 1s linear;
     animation-direction: normal;
     animation-iteration-count: 1;
     animation-fill-mode: forwards;
 }
 
-.chiltepin_animation{
+.bell_pepper_animation_left{
+    width: 50px;
+    height: 50px;
+    background: url('/rsc/img/dynamic/weapons/bell_pepper.png');
+    animation: move_weapon_left 1s linear;
+    animation-direction: normal;
+    animation-iteration-count: 1;
+    animation-fill-mode: forwards;
+}
+
+.chiltepin_animation_right{
     width: 50px;
     height: 50px;
     background: url('/rsc/img/dynamic/weapons/chiltepin.png') center;
+    animation: move_weapon_right 1s linear;
+    animation-direction: normal;
+    animation-iteration-count: 1;
+    animation-fill-mode: forwards;
+}
+
+.chiltepin_animation_left{
+    width: 50px;
+    height: 50px;
+    background: url('/rsc/img/dynamic/weapons/chiltepin.png') center;
+    animation: move_weapon_left 1s linear;
     animation-direction: normal;
     animation-iteration-count: 1;
     animation-fill-mode: forwards;
