--- a/rsc/main.css
+++ b/rsc/main.css
@@ -3,44 +3,54 @@
  * Main styling, animations, and other misc. snippets.
  */
 
-#tiles { /* where game images to be drawn come from */
-	display: none;
+#tiles {
+    /* where game images to be drawn come from */
+    display: none;
 }
 
-.go { /* game object */
-	position: fixed; /* to set position of game objects */
+.go {
+    /* game object */
+    position: fixed;
+    /* to set position of game objects */
 }
 
-.hide { /* don't show something */
-	display: none;
+.hide {
+    /* don't show something */
+    display: none;
 }
 
-#background-layer { /* where the game is */
-	z-index: 1;
-	transition: all .35s ease-in-out; /* for zooming and moving viewport camera */
+#background-layer {
+    /* where the game is */
+    z-index: 1;
+    transition: all .35s ease-in-out;
+    /* for zooming and moving viewport camera */
 }
 
-#foreground-layer { /* where the UI is */
-	z-index: 2;
+#foreground-layer {
+    /* where the UI is */
+    z-index: 2;
 }
 
-.control-buttons { /* for testing purposes */
-	position: fixed;
-	z-index: 100;
-	top: 5px;
-	left: 5px;
+.control-buttons {
+    /* for testing purposes */
+    position: fixed;
+    z-index: 100;
+    top: 5px;
+    left: 5px;
 }
 
-.cb { /* for testing purposes */
-	margin-top: 5px;
+.cb {
+    /* for testing purposes */
+    margin-top: 5px;
 }
 
-.button{
-	font-family: Gloria Hallelujah;
-	background-color:  rgb(52, 115, 173); /* Green */
+.button {
+    font-family: Gloria Hallelujah;
+    background-color: rgb(52, 115, 173);
+    /* Green */
     color: white;
     font-size: 20px;
-    -webkit-transition-duration: 0.4s; 
+    -webkit-transition-duration: 0.4s;
     transition-duration: 0.4s;
     cursor: pointer;
 }
@@ -52,21 +62,22 @@
 }
 
 /* title */
-h1{
-	font-family: Gloria Hallelujah;
-	text-align: center;
-	font-size: 300%;
+h1 {
+    font-family: Gloria Hallelujah;
+    text-align: center;
+    font-size: 300%;
 }
 
 /* Instruction */
-h2{
+h2 {
     font-family: Gloria Hallelujah;
-	text-align: center;
-	font-size: 100%;
+    text-align: center;
+    font-size: 100%;
 }
 
-#menuScreen{
-    background-image: url('img/main_menu_background.jpg');
+
+#menuScreen {
+    background-image: url('img/static/main_menu_background.jpg');
     background-size: 100% 100%;
     background-repeat: no-repeat;
     position: absolute;
@@ -74,16 +85,53 @@ h2{
     height: 100%;
 }
 
-body{
+#instructions,
+#happyEnding,
+#badEnding {
+    /* background-color: rgb(183, 220, 247); */
+    background-image: url('img/static/endBackground.jpg');
+    background-size: 100% 100%;
+    position: absolute;
+    z-index: 1;
+    background-repeat: no-repeat;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+}
+
+.moving_chicken {
+    background-image: url('img/dynamic/characters/dragon_enemy.png');
+    z-index: 2;
+    width: 100px;
+    height: 100px;
+    animation: move_chicken 5s;
+    animation-iteration-count: infinite;
+    animation-direction: alternate;
+    /* animation-fill-mode: both; */
+}
+
+
+@keyframes move_chicken {
+    from {
+        transform: translateX(0)
+    }
+
+    to {
+        transform: translateX(1450px)
+    }
+}
+
+body {
     width: 100vw;
     height: 100vh;
-    background-position: center 0; display: flex;
+    background-position: center 0;
+    display: flex;
     justify-items: center;
 }
 
-.bubble{
+.bubble {
     position: absolute;
-    z-index:1;
+    z-index: 1;
     width: 100px;
     height: 100px;
     background: url('img/dynamic/weapons/bubble_wand/bubbles.png');
@@ -93,25 +141,31 @@ body{
     animation-fill-mode: forwards;
 }
 
-.bubbleWand{
+.bubbleWand {
     position: absolute;
     z-index: 2;
     width: 100px;
     height: 100px;
     background: url('img/dynamic/weapons/bubble_wand/wand.png');
-    
+
 }
 
-.thaiPepper{
+.thaiPepper {
     width: 100px;
     height: 100px;
     background: url('img/dynamic/weapons/thai_pepper.png');
 }
 
-@keyframes move_weapon{
-    from {transform: translateX(0)}
-    to {transform: translateX(200px)} 
+@keyframes move_weapon {
+    from {
+        transform: translateX(0)
+    }
+
+    to {
+        transform: translateX(200px)
+    }
 }
+
 
 
 .health-bar {
@@ -136,9 +190,12 @@ body{
     justify-content: center;
     font-weight: bold;
 }
-  
 
-#singlePlayer, #instructions { 
+
+#singlePlayer,
+#instructions,
+#happyEnding,
+#badEnding {
     /* selector, selector means the style applies to both selectors */
     display: none;
 }
