--- a/rsc/main.css
+++ b/rsc/main.css
@@ -447,10 +447,11 @@ body{
 .t2684354653 { background-position: -232px -523776512px; }
 
 .y-flappingLeft, .y-walkingLeft, .y-idleLeft, .y-flappingRight, .y-walkingRight, .y-idleRight {
-  background-image: url('/rsc/img/dynamic/characters/youdee_spritesheet.png');
+  background-image: url('/rsc/img/dynamic/characters/yoUDee-spritesheet.png');
   background-repeat: no-repeat;
-  height: 50px;
+  height: 30px;
   width: 30px;
+  background-position-x: -120px;
 }
 
 .y-walkingLeft {
@@ -477,10 +478,10 @@ body{
   to{background-position-x:-210px;}
 }
 
-  @keyframes left-flapping {
-    from{background-position-x:-90px;}
-    to{background-position-x:30px;}
-  }
+@keyframes left-flapping {
+  from{background-position-x:-90px;}
+  to{background-position-x:30px;}
+ }
 
 body {
     display: flex;
