--- a/rsc/main.css
+++ b/rsc/main.css
@@ -68,13 +68,13 @@ h2 {
 	font-size: 100%;
 }
 
-#menuScreen {
+#mainScreen {
 	background-image: url('img/main_menu_background.jpg');
 	background-size: 100% 100%;
 	background-repeat: no-repeat;
 	position: absolute;
 	width: 100%;
-	height: 100%;
+  height: 100%;
 }
 
 body {
@@ -89,7 +89,7 @@ body {
 }
 
 .title, .title_logo {
-	margin-top: 5em;
+  margin-top: 5em;
 }
 
 .main-buttons {
@@ -110,11 +110,12 @@ a:hover {
 	cursor:pointer;
 }
 
+/*
 #singlePlayer, #instructions, #happyEnding,
 #badEnding {
-	/* selector, selector means the style applies to both selectors */
+	/* selector, selector means the style applies to both selectors 
 	display: none;
-}
+} */
 
 .instructions-title, .instructions-written {
 	font-family: Gloria Hallelujah, "Comic Sans", sans-serif, serif;
@@ -130,9 +131,7 @@ a:hover {
 	font-size: 1.8em;
 }
 
-#instructions,
- #happyEnding,
- #badEnding {
+#instructions, #happyEnding, #badEnding {
      /* background-color: rgb(183, 220, 247); */
      background-image: url('img/static/endBackground.jpg');
      background-size: 100% 100%;
@@ -142,6 +141,7 @@ a:hover {
      width: 100%;
      height: 100%;
      text-align: center;
+     display: none;
  }
 
  .bubble_animation_right{
