--- a/rsc/main.css
+++ b/rsc/main.css
@@ -220,6 +220,23 @@ a:hover {
 	to { background-position-x:30px; }
 }
 
+.poof-smoke{
+  background-image: url('img/dynamic/weapons/poof-sheet.png');
+  background-repeat: no-repeat;
+  height: 30px;
+  width: 30px;
+  background-position-x:0px;
+  animation: smoke_show 1s steps(2);
+  background-position-x:-60px;
+
+}
+
+@keyframes smoke_show {
+from { background-position-x:0px; }
+to { background-position-x:-60px; }
+}
+
+
 .garlic {
 	width: 50px;
 	height: 50px;
