--- a/rsc/main.css
+++ b/rsc/main.css
@@ -68,7 +68,7 @@ h2 {
 	font-size: 100%;
 }
 
-#mainScreen {
+#menuScreen {
 	background-image: url('img/main_menu_background.jpg');
 	background-size: 100% 100%;
 	background-repeat: no-repeat;
