--- a/rsc/main.css
+++ b/rsc/main.css
@@ -149,35 +149,37 @@ a:hover {
  }
 
  .bubble_animation_right{
-  position: absolute;
+  position: relative;
   z-index: 1;
   width: 20px;
   height: 20px;
-  background: url('img/dynamic/weapons/bubble_wand/bubbles.png');
+  /*background: url('img/dynamic/weapons/bubble_wand/bubbles.png');*/
   animation: move_weapon_right 2s linear;
 }
 
 .bubble_animation_left{
-  position: absolute;
+  position: relative;
   z-index: 1;
   width: 20px;
   height: 20px;
-  background: url('img/dynamic/weapons/bubble_wand/bubbles.png');
+  /*background: url('img/dynamic/weapons/bubble_wand/bubbles.png');*/
   animation: move_weapon_left 2s linear;
 }
 
-.thaiPepper_animation_right {
-  width: 20px;
-  height: 20px;
-  background: url('img/dynamic/weapons/thai_pepper.png');
-  animation: move_weapon_right 2s linear;
+.thai_pepper_animation_right {
+  position: relative;
+  width: 50px;
+  height: 50px;
+  /*background: url('img/dynamic/weapons/thai_pepper.png');*/
+  animation: move_weapon_right 1s linear;
 }
 
-.thaiPepper_animation_left {
-  width: 20px;
-  height: 20px;
-  background: url('img/dynamic/weapons/thai_pepper.png');
-  animation: move_weapon_left 2s linear;
+.thai_pepper_animation_left {
+  position: relative;
+  width: 50px;
+  height: 50px;
+  /*background: url('img/dynamic/weapons/thai_pepper.png');*/
+  animation: move_weapon_left 1s linear;
 }
 
 
@@ -272,22 +274,32 @@ a:hover {
 	to { background-position-x:30px; }
 }
 
-.garlic {
+.garlic_animation_right {
 	width: 50px;
 	height: 50px;
-	background: url('img/dynamic/weapons/garlic/garlic.png') center;
-	animation: move_weapon 2s;
+	/*background: url('rsc/img/dynamic/weapons/garlic/garlic.png') center;*/
+	animation: move_garlic_right 2s;
 	animation-direction: normal;
 	animation-iteration-count: 1;
 	animation-fill-mode: forwards;
 }
 
-  @keyframes move_weapon {
+.garlic_animation_left {
+	width: 50px;
+	height: 50px;
+	/*background: url('rsc/img/dynamic/weapons/garlic/garlic.png') center;*/
+	animation: move_garlic_left 2s;
+	animation-direction: normal;
+	animation-iteration-count: 1;
+	animation-fill-mode: forwards;
+}
+
+  @keyframes move_garlic_right {
     0% { transform: translateX(0); opacity: 1;}
     90% {
         width: 35px;
         height: 35px;
-        background: url('img/dynamic/weapons/garlic/garlic_explosion.png');
+        background: url('img/dynamic/weapons/garlic/garlic_explosion.png') no-repeat;
         opacity: 1;
     }
     100% {
@@ -295,22 +307,54 @@ a:hover {
         opacity: 0;
     }
   }
+  @keyframes move_garlic_left {
+    0% { transform: translateX(0); opacity: 1;}
+    90% {
+        width: 35px;
+        height: 35px;
+        background: url('img/dynamic/weapons/garlic/garlic_explosion.png') no-repeat;
+        opacity: 1;
+    }
+    100% {
+        transform: translateX(-400px);
+        opacity: 0;
+    }
+  }
 
-  .enemy_weapon {
-    width: 100px;
-    height: 100px;
-    background: url('img/dynamic/weapons/enemy_weapon.png'); /*incorrect needs to be enemy weapon*/
+  .enemy_weapon_right {
+    width: 50px;
+    height: 50px;
+    /*background: url('img/dynamic/weapons/enemy_weapon.png'); /*incorrect needs to be enemy weapon*/
 
-    animation: red-attack 1s;
+    animation: enemy_right 1s;
     animation-direction: normal;
     animation-iteration-count: 1;
     animation-fill-mode: forwards;
   }
 
-  @keyframes red-attack {
+  .enemy_weapon_left {
+    width: 50px;
+    height: 50px;
+    /*background: url('img/dynamic/weapons/enemy_weapon.png'); /*incorrect needs to be enemy weapon*/
+
+    animation: enemy_left 1s;
+    animation-direction: normal;
+    animation-iteration-count: 1;
+    animation-fill-mode: forwards;
+  }
+
+  @keyframes enemy_right {
     0% { transform: translateX(0); opacity: 1;}
     100% {
-        transform: translateX(400px);
+        transform: translateX(200px);
+        opacity: 1;
+    }
+  }
+  
+  @keyframes enemy_left {
+    0% { transform: translateX(0); opacity: 1;}
+    100% {
+        transform: translateX(-200px);
         opacity: 1;
     }
   }
